<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/darkMode"
        android:id="@+id/screen">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainTitle"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp">
        </TextView>

        <Button
            android:layout_width="150dp"
            android:id="@+id/add"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/btn_add_title"
            android:backgroundTint="@color/green">
        </Button>

        <Button
            android:layout_width="150dp"
            android:id="@+id/delete"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/btn_delete_title"
            android:backgroundTint="@color/red">
        </Button>

        <Button
            android:layout_width="150dp"
            android:id="@+id/show"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/btn_list_title"
            android:backgroundTint="@color/cyan">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>