<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/darkMode">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:textColor="@color/white"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp">
            </TextView>

            <EditText
                android:layout_width="200dp"
                android:id="@+id/addgroup"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/white">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp">

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/disk"
                android:textColor="@color/white"
                android:layout_marginRight="35dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp">
            </TextView>

            <EditText
                android:layout_width="200dp"
                android:id="@+id/adddisk"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/white">
            </EditText>
        </LinearLayout>

        <Button
            android:layout_width="150dp"
            android:id="@+id/anadirEntrada"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_add_title"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/green">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>